--- a/index.html
+++ b/index.html
@@ -6,54 +6,61 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Kanit:wght@400;600&display=swap');
+        html {
+            height: 100%;
+        }
         body {
             font-family: 'Kanit', sans-serif;
             margin: 0;
-            min-height: 100vh;
+            min-height: 100%;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
+            background: #f4f7f6;
             background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
         }
         .container {
             background: white;
-            padding: 2em;
-            border-radius: 15px;
-            box-shadow: 0 8px 30px rgba(0,0,0,0.1);
+            padding: 2.5em;
+            border-radius: 20px;
+            box-shadow: 0 10px 40px rgba(0,0,0,0.12);
             text-align: center;
             max-width: 500px;
             width: 90%;
         }
         h1 {
-            color: #2d87f0;
+            color: #1a73e8;
             margin-bottom: 1.5em;
+            font-weight: 600;
         }
         .button-group {
             display: flex;
             flex-direction: column;
-            gap: 1em;
+            gap: 1.2em;
         }
         .button {
             padding: 1em;
             border: none;
             border-radius: 8px;
             font-size: 1.1em;
+            font-weight: 500;
             cursor: pointer;
             text-decoration: none;
+            color: white;
             font-family: 'Kanit', sans-serif;
-            transition: transform 0.2s;
+            transition: all 0.2s ease-in-out;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
         }
         .button:hover {
-            transform: translateY(-2px);
+            transform: translateY(-3px);
+            box-shadow: 0 6px 20px rgba(0,0,0,0.15);
         }
         .student {
             background: linear-gradient(90deg, #2d87f0 65%, #5ad4fc 100%);
-            color: white;
         }
         .admin {
-            background: linear-gradient(90deg, #4caf50 65%, #8bc34a 100%);
-            color: white;
+            background: linear-gradient(90deg, #34a853 65%, #81c784 100%);
         }
     </style>
 </head>
@@ -61,8 +68,8 @@
     <div class="container">
         <h1>ระบบประเมินการสอน</h1>
         <div class="button-group">
-            <a href="student-evaluation.html" class="button student">แบบประเมินสำหรับนักเรียน</a>
-            <a href="manage-instructors.html" class="button admin">จัดการข้อมูลผู้สอน (แอดมิน)</a>
+            <a href="student-evaluation.html" class="button student">สำหรับนักเรียน: ทำแบบประเมิน</a>
+            <a href="manage-instructors.html" class="button admin">สำหรับแอดมิน: จัดการข้อมูลผู้สอน</a>
         </div>
     </div>
 </body>
